--- a/src/paylink.config.json
+++ b/src/paylink.config.json
@@ -14,7 +14,7 @@
       "value": "bx-envelope",
       "link": "mailto:dlcastillo3015@gmail.com"
     },
-    { "label": "Link", "value": "bx-link", "link": "https://dlcastillop.com" },
+    { "label": "Link", "value": "bx-link", "link": "https://anthonyle.com" },
     {
       "label": "GitHub",
       "value": "bxl-github",
