--- a/src/paylink.config.json
+++ b/src/paylink.config.json
@@ -1,5 +1,5 @@
 {
-  "theme": "night",
+  "theme": "minimalist-theme",
 
   "properties": {
     "name": "Anthony Le",
@@ -12,7 +12,7 @@
     {
       "label": "Email",
       "value": "bx-envelope",
-      "link": "mailto:dlcastillo3015@gmail.com"
+      "link": "<a href='mailto&#58;%61%&#54;&#69;&#37;&#55;4hony&#64;a%6E%&#55;4&#104;ony&#108;e&#46;%&#54;3&#111;&#109;'>an&#116;h&#111;ny&#64;a&#110;thonyle&#46;com</a>"
     },
     { "label": "Link", "value": "bx-link", "link": "https://anthonyle.com" },
     {
