--- a/src/paylink.config.json
+++ b/src/paylink.config.json
@@ -12,7 +12,7 @@
     {
       "label": "Email",
       "value": "bx-envelope",
-      "link": "mailto&#58;%61%&#54;&#69;&#37;&#55;4hony&#64;a%6E%&#55;4&#104;ony&#108;e&#46;%&#54;3&#111;&#109;'>an&#116;h&#111;ny&#64;a&#110;thonyle&#46;com"
+      "link": "mailto:anthony@anthonyle.com"
     },
     { "label": "Link", "value": "bx-link", "link": "https://anthonyle.com" },
     {
