--- a/src/paylink.config.json
+++ b/src/paylink.config.json
@@ -18,7 +18,7 @@
     {
       "label": "GitHub",
       "value": "bxl-github",
-      "link": "https://github.com/dlcastillop"
+      "link": "https://github.com/Nerdsterle/"
     },
     {
       "label": "Twitter",
@@ -28,12 +28,12 @@
     {
       "label": "LinkedIn",
       "value": "bxl-linkedin",
-      "link": "https://linkedin.com/in/dlcastillop"
+      "link": ""
     },
     {
       "label": "Instagram",
       "value": "bxl-instagram",
-      "link": "https://instagram.com/dlcastillop"
+      "link": "https://www.instagram.com/legacyle/"
     },
     { "label": "Discord", "value": "bxl-discord", "link": "" },
     { "label": "Facebook", "value": "bxl-facebook", "link": "https://www.facebook.com/TheAnthonyLe" },
