--- a/src/paylink.config.json
+++ b/src/paylink.config.json
@@ -58,6 +58,12 @@
       "img": "./images/payments/paypal.svg"
     },
     {
+      "id": "venmo",
+      "label": "Venmo",
+      "value": "https://venmo.com/Nerdster",
+      "img": "./images/payments/venmo.svg"
+    },
+    {
       "id": "btc",
       "label": "Bitcoin",
       "value": "",
